Absätze be über mich

--- a/index.html
+++ b/index.html
@@ -221,14 +221,32 @@
     <section id="ueber-mich">
       <div class="container">
         <h2>Über mich</h2>
-        <p>
-          Mit meiner umfangreichen Erfahrung in der Datenanalyse und im 
-          Projektmanagement konzentriere ich mich auf die Entwicklung 
-          innovativer, datengetriebener Lösungen...
-        </p>
-        <p>
-          ...
-        </p>
+        <p><strong>Absatz 1:</strong></p>
+        <pre style="margin:0;">
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        </pre>
+        <br>
+
+        <p><strong>Absatz 2:</strong></p>
+        <pre style="margin:0;">
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        </pre>
+        <br>
+
+        <p><strong>Absatz 3:</strong></p>
+        <pre style="margin:0;">
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        </pre>
+        <br>
+
+        <p><strong>Absatz 4:</strong></p>
+        <pre style="margin:0;">
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        </pre>
       </div>
     </section>
 
