--- a/index.html
+++ b/index.html
@@ -230,8 +230,10 @@
         <h2>Über mich</h2>
         <p><strong>Absatz 1:</strong></p>
         <pre style="margin:0;">
-    XXXX12XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    <!-- Über mich: Persönliche Notiz -->
+    Herzlich willkommen auf meiner Webseite! Ich bin Matthias Kuhn, der kreative Kopf hinter datafreak79.ch. 
+    Mit viel Herzblut und Expertise in HTML, CSS und JavaScript gestalte ich moderne, responsive Webseiten, 
+    die sowohl ästhetisch als auch funktional überzeugen.
         </pre>
         <br>
 
