--- a/index.html
+++ b/index.html
@@ -239,8 +239,9 @@
 
         <p><strong>Absatz 2:</strong></p>
         <pre style="margin:0;">
-    1XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    Ich nutze R, um Daten effizient zu analysieren und zu visualisieren. 
+    Dabei wende ich verschiedene Funktionen wie ls(), summary() und ggplot() an, 
+    um wichtige statistische Kennzahlen zu ermitteln und ansprechende Graphen zu erstellen.
         </pre>
         <br>
 
