Über micht ergänzrt

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <section id="ueber-mich">
       <div class="container">
         <h2>Über mich</h2>
-        <p><strong>Absatz 1:</strong></p>
+        <p><strong>Die Website</strong></p>
         <pre style="margin:0;">
     <!-- Über mich: Persönliche Notiz -->
     Herzlich willkommen auf meiner Webseite! Ich bin Matthias Kuhn, der kreative Kopf hinter datafreak79.ch. 
@@ -237,24 +237,27 @@
         </pre>
         <br>
 
-        <p><strong>Absatz 2:</strong></p>
+        <p><strong>Passion Daten</strong></p>
         <pre style="margin:0;">
-    X1XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    Meine Leidenschaft für Datenanalyse zeigt sich in meiner Begeisterung für R und Excel. 
+    Mit R erkunde ich komplexe Datensätze, entwickle effektive Analysen und automatisierte Prozesse, 
+    während Excel mir ermöglicht, diese Daten anschaulich aufzubereiten und zu visualisieren. 
+    Die Kombination beider Tools inspiriert mich täglich, kreative und effiziente Lösungen zu entwickeln.
         </pre>
         <br>
 
-        <p><strong>Absatz 3:</strong></p>
+        <p><strong>Hobby</strong></p>
         <pre style="margin:0;">
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    Foxred Labrador, Gravel Bike, Schwimmen, Fitness und EDV bereichern meinen Alltag. 
+    Ich genieße ausgiebige Spaziergänge mit meinem treuen Foxred Labrador, 
+    erkunde das Gelände auf dem Gravel Bike und halte mich sportlich fit beim Schwimmen und im Fitnessstudio. 
+    Zugleich fasziniert mich die Welt der EDV, die meine kreative Seite unterstützt.
         </pre>
         <br>
 
-        <p><strong>Absatz 4:</strong></p>
+        <p><strong>Beruf</strong></p>
         <pre style="margin:0;">
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+    Langjährige Erfahrung als User von ERP- und CRM-Tools, nun möchte ich in die Programmierung solcher Systeme einsteigen.
         </pre>
       </div>
     </section>
