--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <!-- Kapitel 1: Dokumentenkopf (Head) --------------------------------------->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>datafreak79.ch</title>
@@ -9,7 +8,6 @@
   <!-- Google Fonts für "Montserrat" -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   
-  <!-- Kapitel 2: CSS-Stile --------------------------------------------------->
   <style>
     /* Allgemeine Seitenstile */
     body {
@@ -94,14 +92,12 @@
       cursor: pointer;
       font-size: 1.5rem;
     }
-    /* Mobile Ansicht */
     body.mobile-mode nav ul li {
       display: none;
     }
     body.mobile-mode nav ul li.active {
       display: block;
     }
-    /* Hauptbereich */
     main {
       max-width: 1200px;
       margin: 0 auto;
@@ -143,7 +139,6 @@
       flex-direction: column;
       align-items: flex-start;
     }
-    /* Input-Feld für die R-Befehle-Suche */
     #r-search-input {
       width: 80%;
       padding: 8px;
@@ -152,7 +147,6 @@
       border-radius: 5px;
       margin-bottom: 10px;
     }
-    /* Container für die R-Befehle-Suchergebnisse */
     #r-search-results {
       background-color: #fff;
       padding: 10px;
@@ -180,7 +174,6 @@
 </head>
 
 <body>
-  <!-- Kapitel 3: Fixierter Bereich + Header ----------------------------------->
   <div id="fixed-top">
     <div id="top-banner">
       &copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn
@@ -222,44 +215,61 @@
     </header>
   </div>
 
-  <!-- Kapitel 4: Hauptinhalt (Main) -------------------------------------------->
   <main>
     <!-- Abschnitt: Über mich -->
     <section id="ueber-mich">
       <div class="container">
         <h2>Über mich</h2>
+
         <p><strong>Die Website</strong></p>
-        <pre style="margin:0;">
-    <!-- Über mich: Persönliche Notiz -->
-    Herzlich willkommen auf meiner Webseite! Ich bin Matthias Kuhn, der kreative Kopf hinter datafreak79.ch. 
-    Mit viel Herzblut und Expertise in HTML, CSS und JavaScript gestalte ich moderne, responsive Webseiten, 
-    die sowohl ästhetisch als auch funktional überzeugen.
+        <!-- WICHTIG: white-space: pre-line, damit Zeilenumbrüche erhalten bleiben -->
+        <pre style="margin:0; white-space: pre-line;">
+Herzlich willkommen auf meiner Webseite! Ich bin Matthias Kuhn, der kreative Kopf hinter datafreak79.ch.
+Mit viel Herzblut und Expertise in HTML, CSS und JavaScript gestalte ich moderne, responsive Webseiten,
+die sowohl ästhetisch als auch funktional überzeugen.
         </pre>
         <br>
 
         <p><strong>Passion Daten</strong></p>
-        <pre style="margin:0;">
-    Meine Leidenschaft für Datenanalyse zeigt sich in meiner Begeisterung für R und Excel. 
-    Mit R erkunde ich komplexe Datensätze, entwickle effektive Analysen und automatisierte Prozesse, 
-    während Excel mir ermöglicht, diese Daten anschaulich aufzubereiten und zu visualisieren. 
-    Die Kombination beider Tools inspiriert mich täglich, kreative und effiziente Lösungen zu entwickeln.
+        <pre style="margin:0; white-space: pre-line;">
+Meine Leidenschaft für Datenanalyse zeigt sich in meiner Begeisterung für R und Excel.
+Mit R erkunde ich komplexe Datensätze, entwickle effektive Analysen und automatisierte Prozesse,
+während Excel mir ermöglicht, diese Daten anschaulich aufzubereiten und zu visualisieren.
+Die Kombination beider Tools inspiriert mich täglich, kreative und effiziente Lösungen zu entwickeln.
         </pre>
         <br>
 
         <p><strong>Hobby</strong></p>
-        <pre style="margin:0;">
-    Foxred Labrador, Gravel Bike, Schwimmen, Fitness und EDV bereichern meinen Alltag. 
-    Ich genieße ausgiebige Spaziergänge mit meinem treuen Foxred Labrador, 
-    erkunde das Gelände auf dem Gravel Bike und halte mich sportlich fit beim Schwimmen und im Fitnessstudio. 
-    Zugleich fasziniert mich die Welt der EDV, die meine kreative Seite unterstützt.
+        <pre style="margin:0; white-space: pre-line;">
+Foxred Labrador, Gravel Bike, Schwimmen, Fitness und EDV bereichern meinen Alltag.
+Ich genieße ausgiebige Spaziergänge mit meinem treuen Foxred Labrador,
+erkunde das Gelände auf dem Gravel Bike und halte mich sportlich fit beim Schwimmen und im Fitnessstudio.
+Zugleich fasziniert mich die Welt der EDV, die meine kreative Seite unterstützt.
         </pre>
         <br>
 
         <p><strong>Beruf</strong></p>
-        <pre style="margin:0;">
-    Langjährige Erfahrung als User von ERP- und CRM-Tools, nun möchte ich in die Programmierung solcher Systeme einsteigen.
+        <pre style="margin:0; white-space: pre-line;">
+Langjährige Erfahrung als User von ERP- und CRM-Tools, nun möchte ich in die Programmierung solcher Systeme einsteigen.
         </pre>
+
       </div>
+    </section>
+
+    <!-- Abschnitt: Hobby -->
+    <section id="hobby">
+      <div class="container">
+        <h2>unser Goldschatz</h2>
+        <p><strong>Foxred Labrador Toska :-)</strong></p>
+        <img src="Toska.JPG" alt="Toska" style="max-width:100%; height:auto; display:block; margin:0 auto;">
+      </div>
+    </section>
+
+    <!-- Abschnitt: Projekte -->
+    <section id="projekte">
+      <div class="container">
+        <h2>Projekte</h2>
+        <!-- ... (restlicher Inhalt unverändert) -->
     </section>
 
     <!-- Abschnitt: Hobby -->
